Added create-aur-archive script to create the upload packages
Signed-off-by: Andreas Pieber <anpieber@gmail.com>

--- a/README
+++ b/README
@@ -5,4 +5,5 @@ Setup
 
 * Create package by running makepkg in root directory.
 * Install locally using pacman -U on the created package.
+* To upload the package to the aur use the create-aur-upload script and the aur.archlinux.org submit web ui
 
