Use readme instead of full script

--- a/README
+++ b/README
@@ -5,5 +5,6 @@ Setup
 
 * Create package by running makepkg in root directory.
 * Install locally using pacman -U on the created package.
-* To upload the package to the aur use the create-aur-upload script and the aur.archlinux.org submit web ui
+* To upload the package to the aur use the mkaurball command from the pkgbuild-introspection package.
+* Go to aur.archlinux.org submit the generated package via the web ui.
 
